--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ hr:hover {
 
 .header-right a {
     margin-top: 2.1rem;
-    padding-top: 0.2rem;
     width: 7.45rem;
 }
 
